--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "deploy": "gh-pages -d dist",
     "dev": "vite",
+    "build:dev": "vite build --mode development",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
